--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -162,6 +162,9 @@ h2.group-header {
   &.brown:before {
     background-color: brown;
   }
+  &.magenta:before {
+    background-color: magenta;
+  }
 }
 
 //.legend.blue {
