--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -26,6 +26,7 @@ Who is funding you?
 <ul>
   <li>$200 on a logo (isn’t it great?)</li>
   <li>$60 on the domain name and email account</li>
+  <li>$5.12 on hosting</li>
   <li>$25 for a* bottle of rose to drink during a meeting</li>
 </ul>
 <h3>
