--- a/app/views/field_of_studies/index.html.erb
+++ b/app/views/field_of_studies/index.html.erb
@@ -13,13 +13,20 @@
 
 
 <div class="flex-container row">
-  <div class="col">
+  <div class="row">
     <div id="legend">
       <h2>Legend</h2>
-        <div class="legend red float-start float-lg-none">Postgraduate</div>
-        <div class="legend blue float-start float-lg-none">Bachelor Degree</div>
-        <div class="legend green float-start float-lg-none">Diploma</div>
-        <div class="legend brown float-start float-lg-none">Up to Year 12 or Equiv</div>
+        <div class="legend red float-start">Natural and Physical Sciences</div>
+        <div class="legend blue float-start">Information Technology</div>
+        <div class="legend green float-start">Architecture and Building</div>
+        <div class="legend orange float-start">Engineering and Related Technologies</div>
+        <div class="legend cyan float-start">Agriculture, Environmental and Related Studies</div>
+        <div class="legend pink float-start">Health</div>
+        <div class="legend purple float-start">Education</div>
+        <div class="legend magenta float-start">Management and Commerce</div>
+        <div class="legend darkmagenta float-start">Society and Culture (incl Law)</div>
+        <div class="legend lime float-start">Creative Arts</div>
+        <div class="legend cadetblue float-start">Food, Hospitality and Personal Services</div>
     </div>
   </div>
   <div class="col">
