Update search text

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,6 +25,6 @@
 <div class="container search-container">
   <div id="search">
     <%= render "search_form" %>
-    <p>Search for any Candidate, Electorate, Party, Prior Career, Education or Union </p>
+    <p>Search for any Candidate, Electorate, Party, Prior Career or Education </p>
   </div>
 </div>
