--- a/app/views/qualification_levels/index.html.erb
+++ b/app/views/qualification_levels/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container search-container">
   <div id="search">
     <%= render :partial => 'home/search_form' %>
-    <p>Search for any Candidate, Electorate, Party, Prior Career, Education or Union </p>
+    <p>Search for any Candidate, Electorate, Party, Prior Career or Education </p>
   </div>
 </div>
 
