--- a/app/views/home/_column_gender.html.erb
+++ b/app/views/home/_column_gender.html.erb
@@ -1,6 +1,6 @@
 <h3>Where the bloody hell are the females?</h3>
 <p>
-  Where the bloody hell are the females? Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labour candidates in safe seats are male.
+  Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labour candidates in safe seats are male.
 </p>
 <ul>
   <li><strong>The Coalition has 34% female candidates but only 16% in safe seats (>6% margin)</strong></li>
@@ -10,19 +10,4 @@ Overall Labor is closer to gender equity but has nominated only 35% females in s
 <li><strong>
 Where there is heavy lifting to be done (in swing seats with <6% margin), both parties have nominated a higher proportion of females (Labour 58%, Coalition 49%)
 </strong></li>
-<p>
-A new website www.whothebloodyhellarethey.com  has highlighted the shortcomings of both major parties in female representation at the upcoming federal election.
-</p>
-<p>
-Looking at both upper and lower house candidates for all seats, the split of candidates running for the major parties is 60% male vs 40% female.
-</p>
-<p>
-However, whilst Labor can have some claims to approaching equality with a 54% male / 46% female split, the coalition’s 66% male / 34% female ratio is more appropriate for the dark ages than a modern-day representative party.
-</p>
-<p>
-More interestingly, when we examine gender breakdown across Safe (>6% margin), Swing (0-6% margin) and Unlikely (>6%) seats, we see that both parties heavily favour men in safe seats whilst leaving female candidates to do the heavy lifting in swing seats.
-</p>
-<p>
-  <strong>House of Representatives 2022 Federal Election</strong>
-  <%= image_tag "gender_graphic.png" %>
-</p>
+</ul>
