--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -1,14 +1,12 @@
 <h1>Gender</h1>
-
-<div class="container search-container">
-  <div id="search">
-    <%= render :partial => 'home/search_form' %>
-
-  </div>
+<div class="row expandable" id="mainText">
+  <%= render "text" %>
 </div>
+<a class="btn btn-primary read-more"  href="#mainText" role="button" aria-expanded="false" aria-controls="mainText">Read More</a>
+<a class="btn btn-primary"  href="#data" role="button">See the data</a>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>All Candidates</h3>
     <%= pie_chart(
       @gender_data.all_candidates.all_seats.count,
@@ -16,7 +14,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>General Population</h3>
     <%= pie_chart(
       @gender_data.genpop.count,
@@ -27,7 +25,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>Labor Candidates</h3>
     <%= pie_chart(
       @gender_data.alp.all_seats.count,
@@ -35,7 +33,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>Coalition Candidates</h3>
     <%= pie_chart(
       @gender_data.coalition.all_seats.count,
@@ -46,7 +44,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>Labor Candidates in safe seats (and safe senate positions)</h3>
     <%= pie_chart(
       @gender_data.alp.safe.count,
@@ -54,7 +52,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>Coalition Candidates in safe seats (and safe senate positions)</h3>
     <%= pie_chart(
       @gender_data.coalition.safe.count,
@@ -65,7 +63,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>Labor Candidates in swing seats (and possible-to-win senate positions)</h3>
     <%= pie_chart(
       @gender_data.alp.swing.count,
@@ -73,7 +71,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>Coalition Candidates in swing seats (and possible-to-win senate positions)</h3>
     <%= pie_chart(
       @gender_data.coalition.swing.count,
@@ -82,10 +80,9 @@
     ) %>
   </div>
 </div>
-</div>
 
 <div class="flex-container gender row">
-  <div class="col-lg-3">
+  <div class="col-md">
     <h3>Labor Candidates in unlikely seats (and unlikely-to-win senate positions)</h3>
     <%= pie_chart(
       @gender_data.alp.unlikely.count,
@@ -93,7 +90,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col-lg-3">
+  <div class="col-md">
     <h3>Coalition Candidates in unlikely seats (and unlikely-to-win senate positions)</h3>
     <%= pie_chart(
       @gender_data.coalition.unlikely.count,
@@ -104,7 +101,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>Labor Candidates in Senate</h3>
     <%= pie_chart(
       @gender_data.alp.senate.count,
@@ -113,7 +110,7 @@
       suffix: "%"
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>Coalition Candidates in Senate</h3>
     <%= pie_chart(
       @gender_data.coalition.senate.count,
@@ -124,7 +121,7 @@
 </div>
 
 <div class="flex-container gender row">
-  <div class="col">
+  <div class="col-md">
     <h3>Labor Candidates in Lower House</h3>
     <%= pie_chart(
       @gender_data.alp.lower_house.count,
@@ -132,7 +129,7 @@
       legend: false
     ) %>
   </div>
-  <div class="col">
+  <div class="col-md">
     <h3>Coalition Candidates in Lower House</h3>
     <%= pie_chart(
       @gender_data.coalition.lower_house.count,
@@ -140,4 +137,13 @@
       legend: false,
     ) %>
   </div>
+</div>
+
+<div class="row">
+  <h2 id="data">Data</h2>
+  <p>
+    <strong>House of Representatives 2022 Federal Election</strong>
+    <br />
+    <%= image_tag "gender_graphic.png" %>
+  </p>
 </div>
