--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-xl expandable" id="column-1">
-      <%= render "column_information" %>
-      <p class="read-more">
-      <a class="btn btn-primary" href="#column-1" role="button" aria-expanded="false" aria-controls="column-1">Read More</a>
-      </p>
-    </div>
-    <div class="col-xl expandable">
+    <div class="col-lg col-frontpage">
       <%= render "column_gender" %>
       <p class="read-more">
-        <a class="btn btn-primary" href="#column-1" role="button" aria-expanded="false" aria-controls="column-1">Read More</a>
+      <a class="btn btn-primary" href="/genders">Read More</a>
       </p>
     </div>
-    <div class="col-xl expandable">
-      <%= render "column_tenure" %>
+    <div class="col-lg col-frontpage">
+      <%= render "column_information" %>
       <p class="read-more">
-        <a class="btn btn-primary" href="#column-1" role="button" aria-expanded="false" aria-controls="column-1">Read More</a>
+        <a class="btn btn-primary" href="/information">Read More</a>
+      </p>
+    </div>
+    <div class="col-lg col-frontpage">
+      <%= render "column_experience" %>
+      <p class="read-more">
+        <a class="btn btn-primary" href="/professions">Read More</a>
       </p>
     </div>
   </div>
