Shuffle some JS, add some graphs

--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -144,6 +144,8 @@
   <p>
     <strong>House of Representatives 2022 Federal Election</strong>
     <br />
-    <%= image_tag "gender_graphic.png" %>
+    <%= image_tag "gender_representatives.png" %>
+    <%= image_tag "gender_senate.png" %>
+    <%= image_tag "gender_totals.png" %>
   </p>
 </div>
