Switch Labour for Labor, reformat from page divresity thing

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,6 +1,6 @@
 <h2>About</h2>
 <p>
-There is an election approaching.  We will be voting for people to run our country for the next 3 years but how much do we really know about the candidates beyond the “brand” of Liberal/National and Labour?
+There is an election approaching.  We will be voting for people to run our country for the next 3 years but how much do we really know about the candidates beyond the “brand” of Liberal/National and Labor?
 </p>
 <p>
 The Party brand is only part of how a candidate thinks and votes.  The majority of candidates are members of a faction within their party - each of which has their own agenda.  And, of course, the life experience of each candidate will influence how they act when elected.
