--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -79,7 +79,7 @@ What are the factions and what do they care about?
 <p>
 Let's rely on the experts for this one.  The Sydney Morning Herald wrote some great articles on this.  Check out:
 <ul>
-  <li><a href="https://www.smh.com.au/politics/federal/what-are-labor-s-factions-and-who-s-who-in-the-left-and-right-20210210-p5718j.html">Labour Factions</a></li>
+  <li><a href="https://www.smh.com.au/politics/federal/what-are-labor-s-factions-and-who-s-who-in-the-left-and-right-20210210-p5718j.html">Labor Factions</a></li>
   <li><a href="https://www.smh.com.au/politics/federal/who-s-who-in-the-liberals-left-right-and-centre-factions-20210303-p577gv.html">Liberal Factions</a></li>
 </ul>
 </p>
