--- a/app/views/genders/_text.html.erb
+++ b/app/views/genders/_text.html.erb
@@ -1,6 +1,6 @@
 <h3>Where the bloody hell are the females?</h3>
 <p>
-  Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labour candidates in safe seats are male.
+  Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labor candidates in safe seats are male.
 </p>
 <ul>
   <li><strong>The Coalition has 34% female candidates but only 16% in safe seats (>6% margin)</strong></li>
@@ -8,7 +8,7 @@
   <li><strong>
     Overall Labor is closer to gender equity but has nominated only 35% females in safe seats</strong></li>
   <li><strong>
-    Where there is heavy lifting to be done (in swing seats with <6% margin), both parties have nominated a higher proportion of females (Labour 58%, Coalition 49%)
+    Where there is heavy lifting to be done (in swing seats with <6% margin), both parties have nominated a higher proportion of females (Labor 58%, Coalition 49%)
   </strong></li>
 </ul>
 <p>
@@ -27,7 +27,7 @@
 <p>Unsurprisingly, this pattern of nominating almost exclusively men in safe seats results in male MPs having much longer tenure in parliament than women.
 </p>
 <p>
-  Looking at incumbent MPs returning to the House of Representatives, we see that coalition MPs have a median tenure of 9 years vs female MP who have a median tenure of 3 years. It’s a similar story for Labour with median male tenure at 12 years vs females at 6 years.
+  Looking at incumbent MPs returning to the House of Representatives, we see that coalition MPs have a median tenure of 9 years vs female MP who have a median tenure of 3 years. It’s a similar story for Labor with median male tenure at 12 years vs females at 6 years.
 </p>
 <p>
   It’s unsurprising we have so few female leaders in our major parties when their tenure is so much lower.
