--- a/app/views/home/_column_gender.html.erb
+++ b/app/views/home/_column_gender.html.erb
@@ -1,6 +1,6 @@
 <h3>Where the bloody hell are the females?</h3>
 <p>
-  Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labour candidates in safe seats are male.
+  Male candidates dominate nominations for safe seats for the major parties in the House of Representatives – 84% of Coalition candidates and 67% of Labor candidates in safe seats are male.
 </p>
 <ul>
   <li><strong>The Coalition has 34% female candidates but only 16% in safe seats (>6% margin)</strong></li>
@@ -8,6 +8,6 @@
   <li><strong>
 Overall Labor is closer to gender equity but has nominated only 35% females in safe seats</strong></li>
 <li><strong>
-Where there is heavy lifting to be done (in swing seats with <6% margin), both parties have nominated a higher proportion of females (Labour 58%, Coalition 49%)
+Where there is heavy lifting to be done (in swing seats with <6% margin), both parties have nominated a higher proportion of females (Labor 58%, Coalition 49%)
 </strong></li>
 </ul>
