--- a/app/views/home/_column_experience.html.erb
+++ b/app/views/home/_column_experience.html.erb
@@ -1,6 +1,6 @@
-<h2>Where the bloody hell is the diversity of experience?</h2>
+<h3>Where the bloody hell is the diversity of experience?</h3>
 <p>You might expect that the members of the next government would draw on a wide array of experience to run this country. Well you’d be wrong…. 45% of incumbent MPs and Senators spent the of their predominant portion of pre-parliamentary careers as lawyers, union officials or political operatives. And it’s 63% for Labor candidates.</p>
-<ul><li>63% of incumbent Labour candidates spent predominant portion of pre-parliamentary careers either as lawyers, union officials or political operatives.</li>
-  <li>For the Coalition this figure is 29%</li>
-  <li>There is no reliable data for non-incumbent candidates</li>
+<ul><li><strong>63% of incumbent Labor candidates spent predominant portion of pre-parliamentary careers either as lawyers, union officials or political operatives.</strong></li>
+  <li><strong>the Coalition this figure is 29%</strong> </li>
+  <li><strong>There is no reliable data for non-incumbent candidates</strong></li>
 </ul>
