Make page reloads happen and other tweaks

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -206,6 +206,10 @@ div.expandable {
   margin-left: 2rem;
 }
 
+.col-frontpage ul {
+  margin-left: 0;
+}
+
 row.collapse {
   min-height: 300px;
 }
