--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,19 +3,19 @@
     <div class="col-lg col-frontpage">
       <%= render "column_gender" %>
       <p class="read-more">
-      <a class="btn btn-primary" href="/genders">Read More</a>
+      <a class="btn btn-primary" href="/genders" data-turbo="false">Read More</a>
       </p>
     </div>
     <div class="col-lg col-frontpage">
       <%= render "column_information" %>
       <p class="read-more">
-        <a class="btn btn-primary" href="/information">Read More</a>
+        <a class="btn btn-primary" href="/information" data-turbo="false">Read More</a>
       </p>
     </div>
     <div class="col-lg col-frontpage">
       <%= render "column_experience" %>
       <p class="read-more">
-        <a class="btn btn-primary" href="/professions">Read More</a>
+        <a class="btn btn-primary" href="/professions" data-turbo="false">Read More</a>
       </p>
     </div>
   </div>
