change a color in legend

--- a/app/views/field_of_studies/index.html.erb
+++ b/app/views/field_of_studies/index.html.erb
@@ -12,7 +12,7 @@
         <div class="legend pink float-start">Health</div>
         <div class="legend purple float-start">Education</div>
         <div class="legend magenta float-start">Management and Commerce</div>
-        <div class="legend darkmagenta float-start">Society and Culture (incl Law)</div>
+        <div class="legend coral float-start">Society and Culture (incl Law)</div>
         <div class="legend lime float-start">Creative Arts</div>
         <div class="legend cadetblue float-start">Food, Hospitality and Personal Services</div>
     </div>
