Fix about us text, slight css fix

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,19 +1,15 @@
 <h2>About</h2>
 <p>
-There is an election approaching.  We will be voting for people to run our country for the next 3 years but how much do we really know about the candidates beyond the “brand” of Liberal/National and Labor?
+  There is an election approaching. Australia will be voting to select that approximate 100 people who will run our country for the next 3 years; but how much do we really know about this group beyond the “brand” of Liberal/National and Labour? A parliament comprised of individuals with a wide range of experiences will have greater insights into the challenges faced by ordinary Australians. We wanted to know how representative our democracy is, and we want the voters to know.In other words, Who the bloody hell are they?
 </p>
 <p>
-The Party brand is only part of how a candidate thinks and votes.  The majority of candidates are members of a faction within their party - each of which has their own agenda.  And, of course, the life experience of each candidate will influence how they act when elected.
+  We wanted to answer the following questions: What faction do candidates belong to? What unions are the candidates affiliated with? What is the religious mix of candidates? What is their education level and their field of study? What was their career prior to entering politics?
 </p>
 <p>
-How much do we really know about our candidates?  What do their factions believe in?  What influence do unions have in their views?  Or their religion?   What about their education level?  Their prior careers?  Do the people seeking election truly represent the demographics of our country?
+  And were we able to easily answer these questions? The answer is currently a resounding NO. We have gathered data on all the incumbents from the main parties and what we can on the challenger candidates (though there is very little data available on them). We have a complete data set on gender, and complete data sets on education and prior career for incumbents. We have struggled to find meaningful data on unions, factions and ethnicity. Though what we have found is eye opening.
 </p>
 <p>
-Are we able to easily answer these questions? The answer is currently a resounding NO and we aim to change that.  We have gathered data on all the incumbents from the main parties and what we can on the challenger candidates (though there is very little data available on them).  Take a look at the data, compare it to the State and National stats from the last Census, and see whether your candidates truly reflect who we,the voters, are.
+  Who the bloody Hell are they is comprised of a bunch of randos who quite like politics and couldn’t answer some basic questions about our democracy. Specifically, a couple of web developers, an engineer, a project manager and a recruiter.
 </p>
-<p>
-You can also help us make it easier to answer these questions.  Help us fill in the data gaps by sharing info via this form.  (Link for this form = https://forms.gle/gzNsCNeW1ViKKiPz7
-</p>
-<p>
 <strong>So, Who the Bloody Hell are They?</strong>
 </p>
