--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -43,101 +43,176 @@
   </div>
 </div>
 
+=====
+
 <div class="flex-container gender row">
+  <h2>House of Reps</h2>
+</div>
+<div class="flex-container gender row">
+  <h3>All Candidates</h3>
   <div class="col-md">
-    <h3>Labor Candidates in safe seats (and safe senate positions)</h3>
+    <h4>Labor</h4>
     <%= pie_chart(
-      @gender_data.alp.safe.count,
-      colors: @gender_data.alp.safe.colors,
+      @gender_data.alp.mps.all.count,
+      colors: @gender_data.alp.mps.all.colors,
       legend: false
     ) %>
   </div>
   <div class="col-md">
-    <h3>Coalition Candidates in safe seats (and safe senate positions)</h3>
+    <h4>Coalition</h4>
     <%= pie_chart(
-      @gender_data.coalition.safe.count,
-      colors: @gender_data.coalition.safe.colors,
+      @gender_data.coalition.mps.all.count,
+      colors: @gender_data.coalition.mps.all.colors,
       legend: false
     ) %>
   </div>
 </div>
 
 <div class="flex-container gender row">
+  <h3>Candidates for Safe Seats</h3>
   <div class="col-md">
-    <h3>Labor Candidates in swing seats (and possible-to-win senate positions)</h3>
+    <h4>Labor</h4>
     <%= pie_chart(
-      @gender_data.alp.swing.count,
-      colors: @gender_data.alp.swing.colors,
+      @gender_data.alp.mps.safe.count,
+      colors: @gender_data.alp.mps.safe.colors,
       legend: false
     ) %>
   </div>
   <div class="col-md">
-    <h3>Coalition Candidates in swing seats (and possible-to-win senate positions)</h3>
+    <h4>Coalition</h4>
     <%= pie_chart(
-      @gender_data.coalition.swing.count,
-      colors: @gender_data.coalition.swing.colors,
-      legend: false
-    ) %>
-  </div>
-</div>
-
-<div class="flex-container gender row">
-  <div class="col-md">
-    <h3>Labor Candidates in unlikely seats (and unlikely-to-win senate positions)</h3>
-    <%= pie_chart(
-      @gender_data.alp.unlikely.count,
-      colors: @gender_data.alp.unlikely.colors,
-      legend: false
-    ) %>
-  </div>
-  <div class="col-md">
-    <h3>Coalition Candidates in unlikely seats (and unlikely-to-win senate positions)</h3>
-    <%= pie_chart(
-      @gender_data.coalition.unlikely.count,
-      colors: @gender_data.coalition.unlikely.colors,
+      @gender_data.coalition.mps.safe.count,
+      colors: @gender_data.coalition.mps.safe.colors,
       legend: false
     ) %>
   </div>
 </div>
 
 <div class="flex-container gender row">
+  <h3>Candidates for Swing Seats</h3>
   <div class="col-md">
-    <h3>Labor Candidates in Senate</h3>
+    <h4>Labor</h4>
     <%= pie_chart(
-      @gender_data.alp.senate.count,
-      colors: @gender_data.alp.senate.colors,
-      legend: false,
-      suffix: "%"
+      @gender_data.alp.mps.swing.count,
+      colors: @gender_data.alp.mps.swing.colors,
+      legend: false
     ) %>
   </div>
   <div class="col-md">
-    <h3>Coalition Candidates in Senate</h3>
+    <h4>Coalition</h4>
     <%= pie_chart(
-      @gender_data.coalition.senate.count,
-      colors: @gender_data.coalition.senate.colors,
+      @gender_data.coalition.mps.swing.count,
+      colors: @gender_data.coalition.mps.swing.colors,
       legend: false
     ) %>
   </div>
 </div>
 
 <div class="flex-container gender row">
+  <h3>Candidates for Unlikely Seats</h3>
   <div class="col-md">
-    <h3>Labor Candidates in Lower House</h3>
+    <h4>Labor</h4>
     <%= pie_chart(
-      @gender_data.alp.lower_house.count,
-      colors: @gender_data.alp.lower_house.colors,
+      @gender_data.alp.mps.unlikely.count,
+      colors: @gender_data.alp.mps.unlikely.colors,
       legend: false
     ) %>
   </div>
   <div class="col-md">
-    <h3>Coalition Candidates in Lower House</h3>
+    <h4>Coalition</h4>
     <%= pie_chart(
-      @gender_data.coalition.lower_house.count,
-      colors: @gender_data.coalition.lower_house.colors,
-      legend: false,
+      @gender_data.coalition.mps.unlikely.count,
+      colors: @gender_data.coalition.mps.unlikely.colors,
+      legend: false
     ) %>
   </div>
 </div>
+
+<div class="flex-container gender row">
+  <h2>Senate</h2>
+</div>
+<div class="flex-container gender row">
+  <h3>All Candidates</h3>
+  <div class="col-md">
+    <h4>Labor</h4>
+    <%= pie_chart(
+      @gender_data.alp.senate.all.count,
+      colors: @gender_data.alp.senate.all.colors,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-md">
+    <h4>Coalition</h4>
+    <%= pie_chart(
+      @gender_data.coalition.senate.all.count,
+      colors: @gender_data.coalition.senate.all.colors,
+      legend: false
+    ) %>
+  </div>
+</div>
+
+<div class="flex-container gender row">
+  <h3>Candidates for Safe Senate Positions</h3>
+  <div class="col-md">
+    <h4>Labor</h4>
+    <%= pie_chart(
+      @gender_data.alp.senate.safe.count,
+      colors: @gender_data.alp.senate.safe.colors,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-md">
+    <h4>Coalition</h4>
+    <%= pie_chart(
+      @gender_data.coalition.senate.safe.count,
+      colors: @gender_data.coalition.senate.safe.colors,
+      legend: false
+    ) %>
+  </div>
+</div>
+
+<div class="flex-container gender row">
+  <h3>Candidates for Swing Senate Positions</h3>
+  <div class="col-md">
+    <h4>Labor</h4>
+    <%= pie_chart(
+      @gender_data.alp.senate.swing.count,
+      colors: @gender_data.alp.senate.swing.colors,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-md">
+    <h4>Coalition</h4>
+    <%= pie_chart(
+      @gender_data.coalition.senate.swing.count,
+      colors: @gender_data.coalition.senate.swing.colors,
+      legend: false
+    ) %>
+  </div>
+</div>
+
+<div class="flex-container gender row">
+  <h3>Candidates for Unlikely Senate Positions</h3>
+  <div class="col-md">
+    <h4>Labor</h4>
+    <%= pie_chart(
+      @gender_data.alp.senate.unlikely.count,
+      colors: @gender_data.alp.senate.unlikely.colors,
+      legend: false
+    ) %>
+  </div>
+  <div class="col-md">
+    <h4>Coalition</h4>
+    <%= pie_chart(
+      @gender_data.coalition.senate.unlikely.count,
+      colors: @gender_data.coalition.senate.unlikely.colors,
+      legend: false
+    ) %>
+  </div>
+</div>
+
+=====
+
 
 <div class="row">
   <h2 id="data">Data</h2>
