--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -29,6 +29,7 @@ Who is funding you?
   <li>$5.12 on hosting</li>
   <li>$25 for a* bottle of rose to drink during a meeting</li>
 </ul>
+<p>*not strictly true, there may have been more than one bottle...</p>
 <h3>
 You have some facts wrong!
 </h3>
